--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -7,8 +7,17 @@
   cursor: pointer;
 }
 
+.large {
+  font-size: 2.5rem;
+}
+
 .icon {
   color: var(--black);
   width: 2.7rem;
   height: 2.7rem;
+}
+
+.iconLarge {
+  width: 3.5rem;
+  height: 3.5rem;
 }
