--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -32,9 +32,10 @@
 .contactContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 3rem;
+  grid-gap: 2rem;
   width: 100%;
   margin-top: 5rem;
+  margin-bottom: 2rem;
 }
 
 .left {
