--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -8,8 +8,8 @@
 
 .sectionheadingContainer {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin-bottom: 2rem;
 }
 
