--- a/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
+++ b/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
@@ -26,15 +26,19 @@
   padding-top: 10rem;
   padding-bottom: 18rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
+  grid-template-columns: 2fr 1.5fr;
+  grid-gap: 2rem;
   z-index: 998;
 }
 
-.heading2 {
+.heading {
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
   letter-spacing: 1px;
+}
+
+.mobileImage {
+  display: none;
 }
 
 .headingii {
@@ -54,7 +58,7 @@
 
 .description {
   margin-top: 0.5rem;
-  width: 80%;
+  /* width: 80%; */
   color: var(--grayText);
 }
 
@@ -62,11 +66,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
 }
 
-.leftTop {
+.rightContent {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -78,10 +83,17 @@
   margin-top: 2rem;
 }
 
+.tagsList strong {
+  color: var(--blue);
+  text-decoration: underline;
+  margin-bottom: 1.5rem;
+  display: block;
+}
+
 .tagsList li {
   list-style: none;
   margin-bottom: 1rem;
-  border: 1px solid grayText;
+  border: 1px solid var(--grayText);
   color: var(--grayText);
   width: fit-content;
   padding: 0.5rem 1rem;
@@ -89,19 +101,39 @@
   user-select: none;
 }
 
-.tagsList li:nth-child(4) {
-  margin-bottom: 0rem;
+.tagsList li:nth-child(1) {
+  margin-top: 0rem;
+}
+
+.btnContainer {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  width: 50%;
+}
+
+.right {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
 }
 
 .imgContainer {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 375px;
+  height: 375px;
+  border: 1px solid var(--lightGray);
+  border-radius: 50%;
 }
 
-.img {
+.img,
+.imgMobile {
   object-fit: cover;
-  border-radius: 20px;
+  border-radius: 50%;
+  border: 10px solid var(--white);
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 968px) {
@@ -115,7 +147,7 @@
     justify-content: center;
   }
 
-  .leftTop {
+  .rightContent {
     align-items: center;
     justify-content: center;
   }
@@ -130,6 +162,25 @@
     margin-right: auto;
   }
 
+  .mobileImage {
+    display: block;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
+  }
+
+  .imgContainerMobile {
+    position: relative;
+    width: 350px;
+    height: 350px;
+  }
+
+  .imgContainer {
+    display: none;
+  }
+
   .tagsList li {
     margin-left: auto;
     margin-right: auto;
@@ -140,14 +191,14 @@
   }
 }
 
-@media screen and (max-width: 768px) {
-  .imgContainer {
-    height: 400px;
-  }
-}
 
 @media screen and (max-width: 568px) {
-  .imgContainer {
-    height: 300px;
+  .imgContainerMobile {
+    height: 250px;
+    width: 250px;
+  }
+
+  .btnContainer {
+    width: 100%;
   }
 }
