--- a/src/components/Overview/Overview.module.css
+++ b/src/components/Overview/Overview.module.css
@@ -11,8 +11,7 @@
   gap: 2rem;
 }
 
-.heading,
-.copy {
+.heading {
   width: 60%;
   text-align: center;
   margin-left: auto;
@@ -21,6 +20,8 @@
 
 .copy {
   color: var(--grayText);
+  font-size: 1.8rem;
+  width: 60%;
 }
 
 @media screen and (max-width: 1068px) {
