--- a/src/components/ProjectProcess/ProjectProcess.module.css
+++ b/src/components/ProjectProcess/ProjectProcess.module.css
@@ -1,3 +1,50 @@
 .container {
   background-color: var(--blue);
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5rem;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.headingii {
+  font-size: 2rem;
+  color: var(--white);
+  margin-top: 1rem;
+}
+
+.copy {
+  color: var(--white);
+  opacity: 0.7;
+}
+
+.strong {
+  color: var(--white);
+}
+
+.copySection {
+  border-bottom: 1px solid var(--lightGray);
+  padding-bottom: 2rem;
+  width: 100%;
+}
+
+.imgContainer {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1720 / 6637;
+}
+
+.img {
+  object-fit: contain;
 }
