--- a/src/components/ProjectProcess/ProjectProcess.module.css
+++ b/src/components/ProjectProcess/ProjectProcess.module.css
@@ -4,10 +4,14 @@
   padding-bottom: 10rem;
 }
 
+.top {
+  margin-bottom: 5rem;
+}
+
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
+  grid-gap: 10rem;
 }
 
 .left {
@@ -16,6 +20,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   gap: 2rem;
+  width: 80%;
 }
 
 .headingii {
@@ -34,17 +39,77 @@
 }
 
 .copySection {
-  border-bottom: 1px solid var(--lightGray);
+  border-bottom: 1px solid var(--lightGray2);
   padding-bottom: 2rem;
   width: 100%;
+}
+
+.right {
+  position: relative;
+  cursor: pointer;
+}
+
+.imgOverlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  z-index: 1;
+  transition: 0.2s all ease-in;
+}
+
+.hover {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  color: var(--white);
+  font-weight: 600;
+  transition: 0.2s all ease-in;
+  padding: 0.5rem 2rem;
+  border-radius: 50px;
+  border: 2px solid var(--white);
+}
+
+.right:hover .imgOverlay {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.right:hover .hover {
+  opacity: 0;
 }
 
 .imgContainer {
   position: relative;
   width: 100%;
-  aspect-ratio: 1720 / 6637;
+  height: 100%;
+  /* aspect-ratio: 1720 / 6637; */
 }
 
 .img {
-  object-fit: contain;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 15px;
+}
+
+@media screen and (max-width: 1068px) {
+  .left {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 968px) {
+  .content {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 5rem;
+  }
+
+  .imgContainer {
+    height: 400px;
+  }
 }
