--- a/src/components/ProjectProcess/ProjectProcess.module.css
+++ b/src/components/ProjectProcess/ProjectProcess.module.css
@@ -21,6 +21,10 @@
   justify-content: flex-start;
   gap: 2rem;
   width: 80%;
+  align-self: flex-start;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 90px;
 }
 
 .headingii {
@@ -46,7 +50,6 @@
 
 .right {
   position: relative;
-  cursor: pointer;
 }
 
 .imgOverlay {
@@ -88,28 +91,22 @@
   position: relative;
   width: 100%;
   height: 100%;
-  /* aspect-ratio: 1720 / 6637; */
+  aspect-ratio: 1 / 3.86;
 }
 
 .img {
-  object-fit: cover;
+  object-fit: contain;
   object-position: top;
   border-radius: 15px;
-}
-
-@media screen and (max-width: 1068px) {
-  .left {
-    width: 100%;
-  }
 }
 
 @media screen and (max-width: 968px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 5rem;
   }
 
-  .imgContainer {
-    height: 400px;
+  .left {
+    width: 100%;
+    position: static;
   }
 }
