--- a/src/components/Drafting/Drafting.module.css
+++ b/src/components/Drafting/Drafting.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--blue);
+  background-color: var(--pink);
   padding-top: 10rem;
   padding-bottom: 10rem;
 }
@@ -25,17 +25,17 @@
 
 .headingii {
   font-size: 2rem;
-  color: var(--white);
+  color: var(--blue);
   margin-top: 1rem;
 }
 
 .copy {
-  color: var(--white);
+  color: var(--blue);
   opacity: 0.7;
 }
 
 .strong {
-  color: var(--white);
+  color: var(--blue);
 }
 
 .copySection {
@@ -67,7 +67,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  color: var(--white);
+  color: var(--blue);
   font-weight: 600;
   transition: 0.2s all ease-in;
   padding: 0.5rem 2rem;
