--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -69,9 +69,9 @@
 
 .cardBottom {
   border-radius: 15px;
-  /* padding-top: 3rem; */
   border: 1px solid var(--lightGray);
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .title,
@@ -87,8 +87,17 @@
   text-align: center;
 }
 
+
+
 .description {
+  padding: .5rem 2rem;
   opacity: 0.7;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 .linksBox {
