--- a/src/components/ImageCollection/ImageCollection.module.css
+++ b/src/components/ImageCollection/ImageCollection.module.css
@@ -6,22 +6,21 @@
 .content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3rem;
   margin-top: 5rem;
 }
 
 .imgContainer {
   position: relative;
   width: 100%;
-  height: 100%;
-  aspect-ratio: 1 / 3.86;
+  height: 500px;
 }
 
 .img {
-  object-fit: contain;
+  object-fit: cover;
   object-position: top;
   border-radius: 15px;
 }
-
 @media screen and (max-width: 868px) {
   .content {
     grid-template-columns: repeat(4, 1fr);
