--- a/src/components/ProjectProcess/ProjectProcess.module.css
+++ b/src/components/ProjectProcess/ProjectProcess.module.css
@@ -91,11 +91,11 @@
   position: relative;
   width: 100%;
   height: 100%;
-  aspect-ratio: 1 / 3.86;
+  
 }
 
 .img {
-  object-fit: contain;
+  object-fit: cover;
   object-position: top;
   border-radius: 15px;
 }
