--- a/src/components/ImageCollection/ImageCollection.module.css
+++ b/src/components/ImageCollection/ImageCollection.module.css
@@ -3,6 +3,14 @@
   padding-bottom: 10rem;
 }
 
+.top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
