--- a/src/components/BlogCard2/BlogCard2.module.css
+++ b/src/components/BlogCard2/BlogCard2.module.css
@@ -38,7 +38,7 @@
   display: flex;
   border-top: 1px dashed var(--lightGray);
   border-bottom: 1px dashed var(--lightGray);
-  padding-top: 1rem;
+  padding: 1rem 0rem;
 }
 
 .title {
@@ -67,6 +67,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    padding-bottom: 0rem;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .imgContainer{
+    height: 175px;
   }
 
   .imgContainer,
