--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -166,9 +166,23 @@
   font-weight: 600;
 }
 
-
 .processContainer {
   margin-top: 20rem;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rem;
+}
+
+.sceneContianer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 1068px) {
@@ -179,13 +193,6 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-  }
-
-  .content {
-    padding: 3rem;
-    padding-top: 2rem;
-    margin-top: 3rem;
-    grid-template-columns: repeat(1, 1fr);
   }
 
   .heading,
@@ -219,17 +226,11 @@
   .btnContainer {
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 1rem; */
     width: 60%;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .content {
-    padding: 0rem;
-    padding-top: 2rem;
-  }
-
   .btnContainer {
     margin-top: 3rem;
   }
