--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -1,7 +1,24 @@
 .container {
   background-color: var(--white);
   padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-bottom: 5rem;
+}
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20rem;
+  margin-bottom: 20rem;
+  margin-left: auto;
+  width: 100%;
+}
+
+.sceneContianer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .top {
@@ -114,6 +131,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .content {
+    margin-bottom: 25rem;
+  }
+  
   .container {
     padding: 0rem 4rem;
   }
