--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -8,7 +8,11 @@
     rgba(252, 210, 205, 1) 15%,
     rgba(189, 183, 213, 1) 65%
   );
-  padding-bottom: 20rem;
+  padding-bottom: 25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .container::after {
@@ -24,8 +28,7 @@
 }
 
 .content {
-  padding-top: 10rem;
-  padding-bottom: 18rem;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,17 +36,29 @@
   gap: 1rem;
   position: relative;
   z-index: 998;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+
+}
+
+.sectionHeadingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .heading {
   text-align: center;
-  user-select: none;
 }
 
 .heading2 {
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
-  user-select: none;
   mix-blend-mode: overlay;
 }
 
@@ -55,7 +70,6 @@
   margin-right: auto;
   line-height: 1.4em;
   font-size: 2rem;
-  user-select: none;
 }
 
 .span {
@@ -64,11 +78,17 @@
 }
 
 .btnContainer {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-  width: 50%;
-  margin-top: 1rem;
+  width: 50%; */
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .box {
@@ -79,7 +99,7 @@
   position: absolute;
   top: 0%;
   left: 50%;
-  transform: translate(-50%, -30%);
+  transform: translate(-50%, -55%);
   width: 100vw;
   height: 100vh;
   z-index: -1;
@@ -87,7 +107,7 @@
 
 @media screen and (max-width: 968px) {
   .btnContainer {
-    width: 80%;
+    width: 250px;
   }
 }
 
