--- a/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
+++ b/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
@@ -22,28 +22,62 @@
   background: url(../../../public/noise.gif);
 }
 
-.content {
-  padding-top: 10rem;
-  padding-bottom: 18rem;
-  display: grid;
-  grid-template-columns: 2fr 1.5fr;
-  grid-gap: 2rem;
+.contentParent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   z-index: 998;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+  width: 100%;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.imgContainer {
+  position: relative;
+  width: 425px;
+  height: 425px;
+  border: 1px solid var(--lightGray);
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.img {
+  object-fit: cover;
+  border-radius: 50%;
+  border: 10px solid var(--white);
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .heading {
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
   letter-spacing: 1px;
-}
-
-.mobileImage {
-  display: none;
+  margin-top: 1rem;
+  /* margin-bottom: 1rem; */
+  text-align: center;
 }
 
 .headingii {
   font-size: 2rem;
   font-weight: 700;
+  text-align: center;
+}
+
+.copy {
+  text-align: center;
 }
 
 .heading2ii {
@@ -56,26 +90,31 @@
   color: var(--grayText);
 }
 
-.description {
-  margin-top: 0.5rem;
-  /* width: 80%; */
-  color: var(--grayText);
-}
-
-.left {
-  height: 100%;
+.descBox {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+}
+
+.description {
+  margin-top: 0.5rem;
+  color: var(--grayText);
+  text-align: center;
+  width: 60%;
+}
+
+.right {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
 .rightContent {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
 
@@ -108,32 +147,7 @@
 .btnContainer {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  width: 50%;
-}
-
-.right {
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
-  justify-content: flex-start;
-  gap: 2rem;
-}
-
-.imgContainer {
-  position: relative;
-  width: 425px;
-  height: 425px;
-  border: 1px solid var(--lightGray);
-  border-radius: 50%;
-}
-
-.img,
-.imgMobile {
-  object-fit: cover;
-  border-radius: 50%;
-  border: 10px solid var(--white);
-  border-radius: 50%;
-  object-fit: cover;
+  width: 250px;
 }
 
 @media screen and (max-width: 968px) {
@@ -162,40 +176,30 @@
     margin-right: auto;
   }
 
-  .mobileImage {
-    display: block;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 3rem;
-  }
-
-  .imgContainerMobile {
-    position: relative;
-    width: 350px;
-    height: 350px;
-  }
-
-  .imgContainer {
-    display: none;
-  }
-
   .tagsList li {
     margin-left: auto;
     margin-right: auto;
   }
 
-  .imgContainer {
-    height: 500px;
+  .btnContainer {
+    width: 275px;
   }
 }
 
+@media screen and (max-width: 968px) {
+  .description {
+    width: 80%;
+  }
+}
 
 @media screen and (max-width: 568px) {
-  .imgContainerMobile {
-    height: 250px;
-    width: 250px;
+  .imgContainer {
+    height: 270px;
+    width: 270px;
+  }
+
+  .description {
+    width: 100%;
   }
 
   .btnContainer {
