--- a/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
+++ b/src/components/ProjectPageDetailsHero/ProjectPageDetailsHero.module.css
@@ -1,13 +1,12 @@
 .container {
-  position: relative;
   width: 100%;
-  min-height: 75vh;
   overflow: hidden;
   background: linear-gradient(
     135deg,
     rgba(252, 210, 205, 1) 15%,
     rgba(189, 183, 213, 1) 65%
   );
+  /* padding-bottom: 20rem; */
 }
 
 .container::after {
@@ -28,11 +27,13 @@
   align-items: center;
   justify-content: center;
   z-index: 998;
-  position: absolute;
+  padding-top: 15rem;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -45%);
+  transform: translate(-50%, -45%); */
   width: 100%;
+  height: 100%;
 }
 
 .content {
@@ -45,12 +46,13 @@
 
 .imgContainer {
   position: relative;
-  width: 425px;
-  height: 425px;
+  width: 325px;
+  height: 325px;
   border: 1px solid var(--lightGray);
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem;
 }
 
 .img {
@@ -150,7 +152,7 @@
   width: 250px;
 }
 
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 1068px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
   }
