--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -4,17 +4,9 @@
 
 .top {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr;
   padding-top: 1.5rem;
   margin-top: 10rem;
-}
-
-.box {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 2rem;
 }
 
 .imgContianer {
@@ -22,6 +14,37 @@
   width: 100%;
   height: 100%;
   /* animation: float 5s ease-in-out infinite; */
+}
+
+.heading {
+  position: relative;
+}
+
+.headingContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  overflow: hidden;
+}
+
+.animatedLine {
+  position: relative;
+  will-change: transform, opacity;
+  margin: 0;
+  padding: 0;
+  color: var(--white);
+  background: linear-gradient(
+    135deg,
+    rgba(252, 210, 205, 1) 15%,
+    rgba(189, 183, 213, 1) 65%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 3vw;
+  font-weight: 500;
+  line-height: 1.2em;
 }
 
 @keyframes float {
@@ -166,7 +189,6 @@
   font-weight: 600;
 }
 
-
 .processContainer {
   margin-top: 20rem;
 }
@@ -240,5 +262,15 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .headingContainer {
+    gap: 4rem;
+  }
+  
+  .animatedLine {
+    font-size: 3rem;
   }
 }
