--- a/src/components/AboutHero/AboutHero.module.css
+++ b/src/components/AboutHero/AboutHero.module.css
@@ -1,45 +1,27 @@
 .container {
-  position: relative;
-  width: 100%;
-  min-height: 75vh;
-  overflow: hidden;
-  background: linear-gradient(
-    135deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
-}
-
-.container::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  content: "";
-  opacity: 0.03;
-  pointer-events: none;
-  background: url(../../../public/noise.gif);
+  background-color: var(--blue);
 }
 
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 3rem;
-  margin-top: 10rem;
 }
 
 .heading {
   margin-top: 1rem;
+  color: var(--white);
 }
 
 .heading2 {
+  color: var(--white);
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
 }
 
 .copy,
 .span {
+  color: var(--white);
   max-width: 640px;
   margin-top: 1rem;
   line-height: 1.4em;
@@ -52,26 +34,39 @@
 
 .span {
   font-weight: 800;
-  margin-left: 0.3rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  color: var(--pink);
+}
+
+.right {
+  position: relative;
+}
+
+.drag {
+  text-align: center;
+  display: block;
+  color: var(--white);
 }
 
 .sceneContianer {
+  /* position: absolute; */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  margin-top: -10rem;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* margin-top: -10rem; */
 }
 
-@media screen and (max-width: 968px) {
-  .container {
+@media screen and (max-width: 1068px) {
+  /* .container {
     padding-bottom: 40rem;
-  }
+  } */
 
   .content {
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 10rem;
+    grid-gap: 0rem;
   }
 
   .left {
@@ -86,11 +81,7 @@
     text-align: center;
   }
 
-  .sceneContianer {
-    margin-top: 0rem;
-    width: 50%;
-    height: 50%;
-    margin-left: auto;
-    margin-right: auto;
+  .right {
+    height: 400px;
   }
 }
