--- a/src/components/Scene/Scene.module.css
+++ b/src/components/Scene/Scene.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   z-index: 10;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   width: 100%;
   height: 100%;
 }
