--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -1,13 +1,6 @@
 .container {
   background-color: var(--white);
-  position: relative;
-  width: 100%;
-  padding-top: 10rem;
-  background: linear-gradient(
-    -135deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
+  padding-bottom: 15rem;
 }
 
 .sectionHeadingContainer {
