--- a/src/components/AboutHero/AboutHero.module.css
+++ b/src/components/AboutHero/AboutHero.module.css
@@ -23,7 +23,7 @@
 
 .copy,
 .span {
-  color: var(--white);
+  color: var(--lightGray);
   max-width: 640px;
   margin-top: 1rem;
   line-height: 1.4em;
