--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,3 +1,7 @@
+.container {
+  background-color: var(--blue);
+  padding-top: 10rem;
+}
 
 .heading1 {
   text-align: center;
@@ -21,6 +25,7 @@
 .box {
   border: 1px solid var(--lightGray);
   margin-top: 3rem;
+  margin-bottom: 10rem;
   border-radius: 25px;
 }
 
