--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -3,31 +3,13 @@
   padding-top: 10rem;
   padding-bottom: 5rem;
 }
-.content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20rem;
-  margin-bottom: 20rem;
-  margin-left: auto;
-  width: 100%;
-}
 
-.sceneContianer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
 
 .top {
   margin-bottom: 5rem;
 }
 
 .sectionHeadingContainer {
-  /* border-bottom: 1px solid var(--lightGray); */
-  /* padding-bottom: 1rem; */
   margin-bottom: 2rem;
 }
 
@@ -37,71 +19,15 @@
   margin-right: 1rem;
 }
 
-.copy {
-  font-size: 2rem;
-  opacity: 0.7;
-}
-
 .bottom {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  border-radius: 25px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
   overflow: hidden;
-  border: 1px solid var(--blue);
 }
 
-.bottomLeft {
-  background: linear-gradient(
-    135deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
-  width: 100%;
-  height: 100%;
-  position: relative;
-  z-index: 998;
-}
-
-.section {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 100%;
-  border-bottom: 1px dashed var(--blue);
-}
-
-.title {
-  padding: 2rem;
-  border-right: 1px dashed var(--blue);
-  font-size: 1.8rem;
-  background-color: var(--gray2);
-}
-
-.description {
-  background-color: var(--gray2);
-  padding: 2rem;
-  opacity: 0.7;
-}
-
-.btnContainer {
-  display: grid;
-  width: 100%;
-  padding: 1rem;
-  background-color: var(--gray2);
-}
-
-.btnContainerii {
-  margin-top: 5rem;
-  margin-left: auto;
-  display: grid;
-  width: 30%;
-}
 
 @media screen and (max-width: 1068px) {
-  .sectionHeadingContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
 
   .container {
     padding: 0rem 7rem;
@@ -134,7 +60,7 @@
   .content {
     margin-bottom: 25rem;
   }
-  
+
   .container {
     padding: 0rem 4rem;
   }
@@ -157,10 +83,4 @@
     height: 300px;
   }
 
-  .btnContainerii {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: 100%;
-    margin-top: 7rem;
-  }
 }
