--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,4 +1,3 @@
-
 .card {
   /* margin-top: -10rem; */
   cursor: pointer;
@@ -10,32 +9,22 @@
   width: 100%;
 }
 
-/* .cardBottom {
-  padding-top: 3rem;
-} */
-
 .imgContainer {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid var(--lightGray);
-  border-radius: 50%;
   transition: all 0.2s ease-in;
-  /* background-image: url(../../../public//images/chuxly.jpg);
-  background-position: 0 100%;
-  background-size: cover;
-  background-attachment: fixed; */
+  border-radius: 15px;
 }
 
 .img {
-  border: 10px solid var(--white);
-  border-radius: 50%;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .card:hover .imgContainer {
@@ -47,7 +36,6 @@
 .cardTop {
   border-radius: 15px;
   background-color: var(--gray2);
-  padding: 3rem;
   border: 1px solid var(--lightGray);
   width: 100%;
 }
@@ -66,9 +54,7 @@
 }
 
 .title {
-  border-top: 1px dashed var(--lightGray);
   font-size: 1.6rem;
-  margin-top: 3rem;
   text-align: center;
 }
 
