--- a/src/components/Tools/Tools.module.css
+++ b/src/components/Tools/Tools.module.css
@@ -53,6 +53,31 @@
   justify-content: space-between;
   gap: 5rem;
   border: 1px solid var(--lightGray);
+  position: relative;
+}
+
+.card:nth-child(2) {
+  background-color: var(--purple2);
+}
+
+.card:nth-child(3) {
+  background-color: var(--pink);
+}
+
+.card:nth-child(4) {
+  background-color: var(--blue);
+}
+
+.card::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.05;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
 }
 
 .one {
@@ -86,8 +111,22 @@
   line-height: 1.2;
 }
 
+.card:nth-child(2) .title,
+.card:nth-child(2) .desc,
+.card:nth-child(4) .title,
+.card:nth-child(4) .desc {
+  color: var(--white);
+}
+
+.card:nth-child(2) .desc,
+.card:nth-child(4) .desc {
+  color: var(--white);
+  opacity: 0.7;
+}
+
 .iconContainer {
   background-color: var(--purple2);
+  border: 1px solid var(--white);
   width: 60px;
   height: 60px;
   border-radius: 50%;
