--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,12 +1,43 @@
 .card {
-  /* margin-top: -10rem; */
-  cursor: pointer;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
   width: 100%;
+}
+
+.card {
+  position: relative;
+}
+
+.card:nth-child(2) {
+  background-color: var(--purple2);
+}
+
+.card:nth-child(3) {
+  background-color: var(--pink);
+}
+
+.card:nth-child(4) {
+  background-color: var(--blue);
+}
+
+.card:nth-child(5) {
+  background-color: var(--lightGray);
+}
+
+.card::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.05;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
 }
 
 .imgContainer {
