--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -11,7 +11,7 @@
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
-  padding-bottom: 25rem;
+  /* padding-bottom: 25rem; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,44 +31,30 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
-  z-index: 998;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -55%);
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
 }
 
 .sectionHeadingContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   margin-bottom: 1rem;
 }
 
 .heading {
-  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .heading2 {
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
   mix-blend-mode: overlay;
+  margin-left: 1rem;
 }
 
 .copy,
 .span {
   max-width: 640px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
   line-height: 1.4em;
   font-size: 2rem;
 }
@@ -79,36 +65,76 @@
 }
 
 .btnContainer {
-  /* display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
-  width: 50%; */
   margin-top: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   width: 250px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .box {
   position: relative;
 }
 
-.sceneContainer {
-  position: absolute;
-  top: -50%;
-  left: 50%;
-  transform: translate(-50%, -27%);
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
+.right {
+  position: relative;
+  height: 500px;
 }
 
-@media screen and (max-width: 968px) {
-  .btnContainer {
-    width: 250px;
+.drag {
+  text-align: center;
+  color: var(--black);
+  opacity: 0.7;
+  user-select: none;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.sceneContianer {
+  cursor: grab;
+  pointer-events: auto;
+  margin-top: -10rem;
+}
+
+.sceneContianer:active {
+  cursor: grabbing;
+}
+
+.sceneContianer * {
+  pointer-events: none;
+}
+
+@media screen and (max-width: 1068px) {
+  .content {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0rem;
+  }
+
+  .right {
+    order: -1
+  }
+
+  .left,
+  .sectionHeadingContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .heading,
+  .copy {
+    width: 100%;
+    text-align: center;
+  }
+
+  .sceneContianer {
+    margin-top: -1rem;
+  }
+
+  .drag {
+    position: absolute;
+    top: 10%;
+    left: 50%;
   }
 }
 
@@ -117,7 +143,8 @@
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
   }
-  /* .box {
-    display: none;
-  } */
+
+  .right {
+    height: 400px;
+  }
 }
