--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -32,7 +32,7 @@
 
 .content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 3rem;
 }
 
@@ -77,7 +77,36 @@
 .right {
   position: relative;
   height: 500px;
+  order: -1
 }
+
+.content {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0rem;
+  }
+
+  .right {
+    order: -1
+  }
+
+  .left,
+  .sectionHeadingContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .heading,
+  .copy {
+    width: 100%;
+    text-align: center;
+  }
+
+  .sceneContianer {
+    margin-top: -1rem;
+  }
 
 .drag {
   text-align: center;
@@ -91,7 +120,8 @@
 .sceneContianer {
   cursor: grab;
   pointer-events: auto;
-  margin-top: -10rem;
+      margin-top: -1rem;
+
 }
 
 .sceneContianer:active {
