--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,4 +1,4 @@
-.main {
+.container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 1068px) {
-  .main {
+  .container {
     grid-template-columns: repeat(1, 1fr);
   }
 
