--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,6 @@
   overscroll-behavior: none; */
   -webkit-tap-highlight-color: transparent;
   font-family: var(--InterTight);
-  overflow-x: hidden;
 }
 
 html {
@@ -54,17 +53,17 @@ h5,
 h6,
 span {
   color: var(--black);
-  font-family: var(--InterTight);
+  font-family: var(--NaNHoloCondensedBold);
 }
 
 h1 {
-  font-size: 5.6rem;
+  font-size: 6.4rem;
   line-height: 1;
   font-weight: 600;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 4.8rem;
   font-weight: 500;
   line-height: 1.2em;
 }
