--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--blue);
+  background-color: var(--purple2);
 }
 
 .top {
@@ -23,7 +23,7 @@
 .headingContainer {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
   margin-top: 2rem;
   overflow: hidden;
 }
@@ -34,14 +34,6 @@
   margin: 0;
   padding: 0;
   color: var(--white);
-  background: linear-gradient(
-    135deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-size: 3vw;
   font-weight: 500;
   line-height: 1.2em;
@@ -269,7 +261,7 @@
   .headingContainer {
     gap: 4rem;
   }
-  
+
   .animatedLine {
     font-size: 3rem;
   }
