--- a/src/components/SurpriseButton/SurpriseButton.module.css
+++ b/src/components/SurpriseButton/SurpriseButton.module.css
@@ -31,10 +31,8 @@
 
 .btn:hover {
   background-color: transparent;
-  color: var(--blue);
-  box-shadow:
-    0px 0px 0px 0px rgba(153, 126, 152, 1),
-    0px 0px 0px 0px rgba(0, 0, 0, 0.15);
+  border: 1px solid var(--white);
+  box-shadow: none;
 }
 
 .btn::after {
