--- a/src/components/ProjectArea/ProjectArea.module.css
+++ b/src/components/ProjectArea/ProjectArea.module.css
@@ -1,4 +1,4 @@
-.main {
+.container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -11,12 +11,11 @@
 }
 
 @media screen and (max-width: 1068px) {
-  .main {
+  .container {
     grid-template-columns: repeat(1, 1fr);
   }
 
   .left {
-    /* position: static; */
     display: none;
   }
 }
